# cpp_template

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
src/: CMakeLists.txt  main.cpp
test/: main_test.cpp
